@@ -1,0 +1,5 @@
+---
+argument_specs:
+  main:
+    options:
+      # TODO: Add argument validation
