@@ -4,7 +4,8 @@
 :v1_0_0: {base}/releases/tag/v1.0.0
 :v1_0_1: {base}/compare/v1.0.0..v1.0.1
 :v1_0_2: {base}/compare/v1.0.1..v1.0.2
-:unreleased: {base}/compare/v1.0.2..HEAD
+:v1_0_3: {base}/compare/v1.0.2..v1.0.3
+:unreleased: {base}/compare/v1.0.3..HEAD
 
 All notable changes to this project will be documented in this file.
 
@@ -14,6 +15,12 @@ and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Version
 == {unreleased}[Unreleased]
 
 This section tracks upcoming changes that are not yet released.
+
+== {v1_0_3}[v1.0.3]
+
+=== Added
+
+* Ansible role arugment validation file.
 
 === Changed
 
